# graphanno

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
graphanno/: __init__.py  graphanno.py
graphanno/tests/: test_basic.py  test_excluding.py  test_nested.py  test_no_annotations.py
src/: graphanno.py
src/tests/: test_advanced.py  test_basic.py  test_nested.py  test_unsupported.py
src/tests/test_objects/: advanced.py  basic.py
tests/: check_pylint.py  test_advanced.py  test_basic.py  test_duplicated.py  test_excluding.py  test_full_example.py  test_nested.py  test_no_annotations.py  test_unsupported.py  test_version.py  utils.py
tests/test_objects/: advanced.py  basic.py  duplicated.py  full_example.py  nested.py
