[tool.poetry]
name = "graphanno"
version = "1.3.1"
description = "Create graphene ObjectType based on the type annotations."
authors = ["Andrzej Klajnert <github@aklajnert.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
graphene = "<3,>=2.0"
pylint = "^2.3"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pylint = "^2.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
